# zinnia

./: .gitignore  Cargo.toml  README.md  zinnia-compile.sh  zinnia-vcd.sh  zinnia.md
latex/838L Proposal/: main.tex
latex/838L Proposal Draft + Check-in/: main.tex
latex/final_report/: report.bib  report.tex  type_macros.tex  zotero-bib.rdf
latex/milestone1/: milestone1.tex
latex/milestone2/: milestone2.tex
src/: ast.rs  emit.rs  main.rs  parse.rs  types.rs
src/calyx-bindings/: list_filter.futil  scan.futil
state/: state-hw.cabal
state/.stack-work/: stack.sqlite3
state/.stack-work/ghci/68a8db35/: cabal_macros.h
state/.stack-work/ghci/e9767a13/: cabal_macros.h
state/.stack-work/install/x86_64-linux-tinfo6/0a345aaccdc8e18da4b2d88344deebea439ba1fc4b7ff2ab742c0ef4f0e0d460/8.10.7/lib/x86_64-linux-ghc-8.10.7/state-hw-0.1.0.0-J84PUfwtkWa7vtc2xpGECO/: ErrState.hi
state/.stack-work/install/x86_64-linux-tinfo6/0a345aaccdc8e18da4b2d88344deebea439ba1fc4b7ff2ab742c0ef4f0e0d460/8.10.7/pkgdb/: package.cache  state-hw-0.1.0.0-J84PUfwtkWa7vtc2xpGECO.conf
state/src/: ErrState.hs  State.hs
test_files/: basic.z  basic4.z  basic5.z  mult.z  scan.z  test.z  vec_test.z
verilog-tests/: Makefile  MyCounter-calyx.sv  MyCounter.futil  MyCounter.scala  data.json  filter-data.json  half-duplex-spi.futil  list_filter.futil  map_reduce.futil  min_example.futil  minimalcounter.futil  mr-data.json  out.sv  spi-driver.futil
verilog-tests/chisel/: MyCounterTest.v  chisel-example.scala
verilog-tests/clock-div-test/: apio.ini  clock-div.v  leds.pcf
verilog-tests/cocotb/: Makefile  cocotb_test.py  results.xml
verilog-tests/deploy/: hw-layout.pcf
zinnia/: Cargo.toml  basic.z  test.z
zinnia/src/: ast.rs  emit.rs  main.rs  parse.rs  types.rs
zinnia/src/calyx-bindings/: list_filter.futil
zinnia/test_files/: basic2.z  basic3.z  basic4.z
