[package]
name = "zinnia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.4.0"
calyx-frontend = "0.7.1"
calyx-ir = "0.7.1"
calyx-utils = "0.7.1"
chumsky = { version="1.0.0-alpha.7", features=["label"] }
serde_json = "1.0.116"
